Two Makefile commands for Go gens

--- a/spec/components/schemas/payload.yaml
+++ b/spec/components/schemas/payload.yaml
@@ -29,5 +29,6 @@ components:
           x-go-type-skip-optional-pointer: true
         meta:
           $ref: '#/components/schemas/Meta'
+          free-form: true
         traces:
           $ref: '#/components/schemas/Traces'
